--- a/src/styles.css
+++ b/src/styles.css
@@ -29,7 +29,7 @@ html, body {
     padding: 0;
     margin: 0;
     color: #ffff;
-}
+    /* font-size: 18px; */}
 
 ul {
     padding: 0; margin: 0; list-style-type: none;
@@ -96,6 +96,7 @@ p, ul li, .p-color {
     outline: none; text-decoration: none;
     position: relative;
     color: var(--props-color);
+    cursor: pointer;
 }
 
 .anchor-p::after {
