--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -1,7 +1,10 @@
 <header id="navbar" class="w-100 p-2 d-flex align-items-center" [ngClass]="{ 'header-scroll': show }">
     <div class="d-flex align-items-center justify-content-between container">
         <div class="logo">
-            <h3>M</h3>
+            <!-- <h3>M</h3> -->
+            <a href="/" class="cursor-pointer">
+                <img class="cursor-pointer" width="50" height="50" src="../../../assets/images/logo.PNG" alt="">
+            </a>
         </div>
         <div class="menu">
             <ul class="d-flex align-items-center" [@list]>
