set path of assests via domain name

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -103,7 +103,7 @@
 
         </div>
         <div class="image">
-          <img alt="mansoor" class="rounded mx-auto d-block" src="../assets/images/person.jfif" alt="">
+          <img alt="mansoor" class="rounded mx-auto d-block" [src]="appUrl + '/assets/images/person.jfif'" alt="">
         </div>
       </div>
     </div>
