--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -3,7 +3,8 @@
         <div class="logo">
             <!-- <h3>M</h3> -->
             <a href="/" class="cursor-pointer">
-                <img class="cursor-pointer" width="50" height="50" src="../../../assets/images/logo.PNG" alt="">
+                <img class="cursor-pointer" width="50" height="50" [src]="this.appUrl + '/assets/images/logo.PNG'"
+                    alt="">
             </a>
         </div>
         <div class="menu">
@@ -12,7 +13,7 @@
                     <a class="no-a-style" [href]="item.link">
                         <span class="number">{{item.number}}.</span>
                         {{item.name}}
-                    </a>
+                    </a>}
                 </li>
                 <li class="item">
                     <button class="p-button">Resume</button>
