--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -317,7 +317,7 @@
   <!-- Contact section (footer steps) -->
   <footer id="contact" scrollAnimation class="p-width container margin-t-large margin-b-large text-center">
     <h2 class="mb-3">Get In Touch</h2>
-    <p class="mx-auto w-md-25">Althought I'm not currently looking for any new opportunities,
+    <p class="mx-auto w-md-25">Currently looking for new opportunities and
       my inbox is always
       open. Wheather you have a
       question or just want to say hi, I'll try my best to get back to you!</p>
