--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -50,13 +50,15 @@
         <p class="item" style="color: var(--props-color)">Hi, my name is</p>
         <h2 class="fw-bold title-size item p-color">Mansoor Soomro.</h2>
         <h3 class="fw-bold title-size item s-color">I build things for the web.</h3>
-        <p class="item" style="width: clamp(min(45ch, 100%), 50%, 75ch)">
-          I am a Software Engineer with years of worth of experience in building and desigin state of the art digital
+        <p class="item" style="width: clamp(min(65ch, 100%), 50%, 75ch)">
+          I am a Software Engineer with 2+ years of worth of experience in building and desigin state of the art digital
           expereinces.
           Currently I am persuing my masters in Computer Science in
           <a class="anchor-p d-inline-block" target="_blank" href="https://www.uni-paderborn.de/en/">
             Universität Paderborn
           </a>
+          and working as a software engineer in
+          <a class="anchor-p d-inline-block" target="_blank" href="https://www.comnovo.de/en/">Comnovo</a>
         </p>
       </div>
     </div>
