--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -51,7 +51,8 @@
         <h2 class="fw-bold title-size item p-color">Mansoor Soomro.</h2>
         <h3 class="fw-bold title-size item s-color">I build things for the web.</h3>
         <p class="item" style="width: clamp(min(65ch, 100%), 50%, 75ch)">
-          I am a Software Engineer with 2+ years of worth of experience in building and desigin state of the art digital
+          I am a Software Engineer with 2+ years of worth of experience in building and designing state of the art
+          digital
           expereinces.
           Currently I am persuing my masters in Computer Science in
           <a class="anchor-p d-inline-block" target="_blank" href="https://www.uni-paderborn.de/en/">
