--- a/src/app/splash-screen/splash-screen.component.html
+++ b/src/app/splash-screen/splash-screen.component.html
@@ -1,17 +1,18 @@
+<!--[@fade] (@fade.done)="close.emit()"-->
 <div class="splash" [@fade] (@fade.done)="close.emit()">
     <!-- <p>this is the splash screen</p> -->
     <!-- <?xml version="1.0" encoding="utf-8"?> -->
     <!-- Generator: Adobe Illustrator 17.0.2, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
-    <!DOCTYPE svg PUBLIC "-//W3C//DTD SVG 1.1//EN" "http://www.w3.org/Graphics/SVG/1.1/DTD/svg11.dtd">
-    <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
+<!--    <!DOCTYPE svg PUBLIC "-//W3C//DTD SVG 1.1//EN" "http://www.w3.org/Graphics/SVG/1.1/DTD/svg11.dtd">-->
+    <svg #svgElem  version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
         x="0px" y="0px" width="87.59px" height="99.306px" viewBox="0 -15 87.59 120"
         enable-background="new 0 0 87.59 99.306" xml:space="preserve">
         <g>
-            <path stroke="#64ffda" stroke-miterlimit="10"
+            <path #svgPath  stroke="#64ffda" stroke-miterlimit="10"
                 d="M45.377,98.392c-0.953,0.55-2.513,0.552-3.467,0.005l-39.68-22.75
             c-0.954-0.547-1.732-1.895-1.729-2.995l0.139-45.739c0.003-1.1,0.785-2.45,1.738-3l39.837-23c0.953-0.55,2.513-0.552,3.467-0.005
             l39.68,22.75c0.954,0.547,1.732,1.895,1.729,2.995l-0.139,45.739c-0.003,1.1-0.785,2.45-1.738,3L45.377,98.392z" />
         </g>
-        <text x="29" y="60" fill="#64ffda">M</text>
+        <text #svgText x="29" y="60" fill="#64ffda">M</text>
     </svg>
 </div>
