change the src in image

--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -3,7 +3,7 @@
         <div class="logo">
             <!-- <h3>M</h3> -->
             <a [href]="appUrl" class="cursor-pointer">
-                <img class="cursor-pointer" width="50" height="50" [src]="this.appUrl + '/assets/images/logo.PNG'"
+                <img class="cursor-pointer" width="50" height="50" src="/assets/images/logo.PNG"
                     alt="">
             </a>
         </div>
