change certain details

--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -3,7 +3,7 @@
         <div class="logo">
             <!-- <h3>M</h3> -->
             <a [href]="appUrl" class="cursor-pointer">
-                <img class="cursor-pointer" width="50" height="50" src="/assets/images/logo.PNG"
+                <img class="cursor-pointer" width="50" height="50" src="assets/images/logo.PNG"
                     alt="">
             </a>
         </div>
@@ -16,7 +16,7 @@
                     </a>
                 </li>
                 <li class="item">
-                    <a target="_blank" [href]="appUrl + '/assets/resume/resume.pdf'">
+                    <a target="_blank" href="assets/resume/resume.pdf">
                         <button class="p-button">
                             Resume
                         </button>
@@ -46,7 +46,7 @@
                 </a>
             </li>
             <li class="item">
-                <a target="_blank" [href]="appUrl + '/assets/resume/resume.pdf'">
+                <a target="_blank" href="assets/resume/resume.pdf">
                     <button class="p-button">Resume</button>
                 </a>
             </li>
