--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,7 +13,7 @@
         </a>
       </li>
       <li class="mt-4 mb-4">
-        <a href="http://www.github.com" target="_blank" class="github me-1 ms-1 cursor-pointer ng-tns-c16-0"><svg
+        <a href="https://github.com/mansoor1998" target="_blank" class="github me-1 ms-1 cursor-pointer ng-tns-c16-0"><svg
             style="color: inherit;" width="30px" xmlns="http://www.w3.org/2000/svg" role="img" viewBox="0 0 24 24"
             fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
             class="p-color feather feather-github ng-tns-c16-0">
