--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -56,7 +56,7 @@
       [@list]>
       <div>
         <p class="item" style="color: var(--props-color)">Hi, my name is</p>
-        <h2 class="fw-bold title-size item p-color">Mansoor Soomro.</h2>
+        <h2 class="fw-bold title-size item p-color">Mansoor Ali Soomro.</h2>
         <h3 class="fw-bold title-size item s-color">I build things for the web.</h3>
         <p class="item" style="width: clamp(min(65ch, 100%), 50%, 75ch)">
           I am a Software Engineer with 2+ years of worth of experience in building and designing state of the art
