--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -59,15 +59,15 @@
         <h2 class="fw-bold title-size item p-color">Mansoor Ali Soomro.</h2>
         <h3 class="fw-bold title-size item s-color">I build things for the web.</h3>
         <p class="item" style="width: clamp(min(65ch, 100%), 50%, 75ch)">
-          I am a Software Engineer with 2+ years of worth of experience in building and designing state of the art
+          I am a Software Engineer with over 3 years worth of experience in building and designing state of the art
           digital
           expereinces.
           Currently I am persuing my masters in Computer Science in
           <a class="anchor-p d-inline-block" target="_blank" href="https://www.uni-paderborn.de/en/">
             Universität Paderborn
           </a>
-          and working as a software engineer in
-          <a class="anchor-p d-inline-block" target="_blank" href="https://www.comnovo.de/en/">Comnovo</a>
+          and working as a software engineer at
+          <a class="anchor-p d-inline-block" target="_blank" href="https://www.comnovo.de/en/">Comnovo Gmbh</a>
         </p>
       </div>
     </div>
